--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -857,6 +857,18 @@ object {
       text-decoration: none;
       text-transform: uppercase; }
 
+.social-media-journal a {
+  border: 1px solid black;
+  padding: 10px 30px;
+  color: black;
+  font-family: "Montserrat", Arial, sans-serif;
+  text-transform: uppercase;
+  margin-left: 10px; }
+
+.social-media-journal i {
+  color: black;
+  margin-right: 10px; }
+
 #primary {
   padding-right: 5%;
   padding-top: 50px; }
