--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -38,79 +38,76 @@ ul.stories {
    }
  }
 
-.posted-on {
-  .read {
-    a {
-      border: 1px solid #000;
-      padding: 10px 20px;
-      font-family: $font_accent;
-      text-transform: uppercase;
+ .home {
+   .site-content {
+    .posted-on {
+      .read {
+        a {
+          border: 1px solid #000;
+          padding: 10px 20px;
+          font-family: $font_accent;
+          text-transform: uppercase;
+        }
+      }
+    }
+   }
+ }
+
+// adventure section
+
+.adventure-section {
+  display: grid;
+  grid-template-columns: 25% 25% 25% 25%;
+  width: 1120px;
+  height: 500px;
+  margin: 0px auto;
+  .adventure-info {
+    color: white;
+    font-family: $font_accent;
+    font-size: 40px;
+    font-weight: 100;
+    margin: 2%;
+  } a.read-more {
+    border: 1px solid #FFF;
+    color: #FFF;
+    font-family: $font_accent;
+    text-transform: uppercase;
+    padding: 2% 3%;
+    transition: all .2s;
+    background-color: transparent;
+    a.read-more:hover {
+      background-color: $brand_color_green;
+      border: 1px solid $brand_color_green;
     }
   }
 }
-// adventure section
-
-.adventure-container {
-  display: flex;  
-  flex-wrap: wrap;
-  width: 1120px;
-  height: 500px;
-  ul {
-    display: flex;
-    flex-wrap: wrap;
-    list-style: none;
-    width: 100%;
-  } li:first-child {
-    width: 50%;
-    height: 100%;
-  } li:nth-child(2) {
-    width: 50%;
-    height: 50%;
-  } li:nth-child(3) {
-    width: 25%;
-    height: 50%;
-  } li:last-child {
-    width: 25%;
-    height: 50%;
-  }
-}
-
-.adventure-info {
-  h3 {
-    color: white;
-    font-family: $font_main;
-    font-weight: 100;
-    position: absolute;
-    margin: 20px;
-  } a {
-    color: white;
-    font-family: $font_accent;
-    text-transform: uppercase;
-    border: $solid_border;
-    padding: 2%;
-  }
-}
-// adventure images
 
 .canoe {
+  grid-column: 1/3;  
+  grid-row: 1/4;
   background:   
   linear-gradient(
     rgba(0,0,0, 0.3),
     rgba(0,0,0,0.3)), url(../../images/canoe-girl.jpg) center no-repeat;
   background-size: cover; 
-  height: 500px;
-  position: relative;
+ 
 }
 
 .fire {
+  grid-column: 3/5;
+  grid-row: 1/3;
+  height: 250px;
   background:   
   linear-gradient(
     rgba(0,0,0, 0.3),
     rgba(0,0,0,0.3)), url(../../images/beach-bonfire.jpg) center no-repeat;
-  background-size: cover; 
+  background-size: cover;
 }
 
 .mountain {
+  grid-column: 3/4;
+  grid-row: 3/4;
+  height: 250px;
   background:   
   linear-gradient(
     rgba(0,0,0, 0.3),
@@ -118,13 +115,16 @@ ul.stories {
   background-size: cover; 
 }
 
-.star {
+.bonfire {
+  grid-column: 4/4;
+  grid-row: 3/4;
   background:   
   linear-gradient(
     rgba(0,0,0, 0.3),
     rgba(0,0,0,0.3)), url(../../images/night-sky.jpg) center no-repeat;
   background-size: cover; 
 }
+
 
 .inhabitent-journal-title {
   text-transform: uppercase;
@@ -158,8 +158,9 @@ h2.inhabitent-adventures {
 .home {
   .site-header {
     min-height: 100vh;
-    background-image: url('../../images/home-hero.jpg');
+    background-image: url(../../images/inhabitent-logo-full.svg), url(../../images/home-hero.jpg);
     background-size: cover;
+    z-index: 2;
   } #content {
     width: 1024px;
   } .container {
