Added fonts to project and tried to figure out proper file path

--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -63,7 +63,7 @@ ul.stories {
   margin: 0px auto;
   .adventure-info {
     color: white;
-    font-family: $font_accent;
+    font-family: $font_main;
     font-size: 40px;
     font-weight: 100;
     margin: 2%;
