--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -761,7 +761,7 @@ li.storie-items {
   margin: 0px auto; }
   .adventure-section .adventure-info {
     color: white;
-    font-family: "Montserrat", Arial, sans-serif;
+    font-family: "Merriweather", Helvetica, serif;
     font-size: 40px;
     font-weight: 100;
     margin: 2%; }
