--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -680,6 +680,79 @@ a {
   display: -ms-flexbox;
   display: flex; }
 
+.archive div#content {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 100%;
+  padding-top: 4%; }
+
+.archive .page-title h1 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end; }
+
+.archive .entry-header {
+  position: relative; }
+  .archive .entry-header img {
+    width: 100%; }
+  .archive .entry-header .entry-title {
+    background-color: #248A83;
+    font-family: "nov", Arial, sans-serif;
+    text-transform: uppercase;
+    position: absolute;
+    top: 20px;
+    left: 0;
+    color: #f1f1f1; }
+    .archive .entry-header .entry-title a {
+      color: #f1f1f1;
+      font-family: "nov", Arial, sans-serif; }
+  .archive .entry-header .entry-meta {
+    background-color: #248A83;
+    font-family: "nov", Arial, sans-serif;
+    color: #f1f1f1;
+    text-align: center;
+    position: absolute;
+    right: 0;
+    bottom: 7px; }
+
+.single-post .site-content {
+  margin: auto;
+  padding-top: 28px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+  .single-post .site-content .entry-header {
+    position: relative; }
+    .single-post .site-content .entry-header img {
+      width: 100%; }
+    .single-post .site-content .entry-header .entry-title {
+      background-color: #248A83;
+      font-family: "nov", Arial, sans-serif;
+      text-transform: uppercase;
+      position: absolute;
+      top: 20px;
+      left: 0;
+      color: #f1f1f1; }
+      .single-post .site-content .entry-header .entry-title a {
+        color: #f1f1f1;
+        font-family: "nov", Arial, sans-serif; }
+    .single-post .site-content .entry-header .entry-meta {
+      background-color: #248A83;
+      font-family: "nov", Arial, sans-serif;
+      color: #f1f1f1;
+      text-align: center;
+      position: absolute;
+      right: 0;
+      bottom: 7px; }
+
 /*--------------------------------------------------------------
 # Media
 --------------------------------------------------------------*/
@@ -1020,7 +1093,8 @@ li.storie-items {
       text-transform: uppercase;
       position: absolute;
       top: 20px;
-      left: 0; }
+      left: 0;
+      color: #f1f1f1; }
       .blog .site-content .entry-header .entry-title a {
         color: #f1f1f1;
         font-family: "nov", Arial, sans-serif; }
@@ -1032,52 +1106,6 @@ li.storie-items {
       position: absolute;
       right: 0;
       bottom: 7px; }
-
-.postid-42 .site-content,
-.post-45 .site-content,
-.post .site-content {
-  width: 1120px; }
-  .postid-42 .site-content .entry-header img,
-  .post-45 .site-content .entry-header img,
-  .post .site-content .entry-header img {
-    width: 100%; }
-  .postid-42 .site-content .entry-header .entry-meta,
-  .post-45 .site-content .entry-header .entry-meta,
-  .post .site-content .entry-header .entry-meta {
-    background-color: #248A83;
-    color: white;
-    font-family: "nov", Arial, sans-serif;
-    text-transform: uppercase;
-    position: absolute;
-    left: 37.4%;
-    bottom: -54%;
-    padding: 5px 10px; }
-  .postid-42 .site-content .entry-header a,
-  .post-45 .site-content .entry-header a,
-  .post .site-content .entry-header a {
-    color: white; }
-  .postid-42 .site-content .entry-header .entry-title,
-  .post-45 .site-content .entry-header .entry-title,
-  .post .site-content .entry-header .entry-title {
-    font-family: "nov", Arial, sans-serif;
-    font-size: 2.1em;
-    text-transform: uppercase;
-    position: absolute;
-    top: 100px;
-    left: 9.7%;
-    width: 50%;
-    background-color: #248A83;
-    color: white; }
-
-.post-45 .entry-meta {
-  background-color: #248A83;
-  color: white;
-  font-family: "nov", Arial, sans-serif;
-  text-transform: uppercase;
-  position: absolute;
-  left: 37.4%;
-  bottom: -54%;
-  padding: 5px 10px; }
 
 /* header */
 .search-icon {
