--- a/themes/inhabitent/sass/_page-templates.scss
+++ b/themes/inhabitent/sass/_page-templates.scss
@@ -70,7 +70,7 @@ ul.stories {
   .adventure-info {
     color: white;
     font-family: $font_main;
-    font-size: 40px;
+    font-size: 30px;
     font-weight: 100;
     margin: 2%;
   } a.read-more {
@@ -110,6 +110,14 @@ ul.stories {
   background-size: cover;
 }
 
+.fire-info {
+  color: white;
+  font-family: $font_main;
+  font-size: 20px;
+  font-weight: 100;
+  margin: 2%;
+  margin-top: 8%;
+}
 .mountain {
   grid-column: 3/4;
   grid-row: 3/4;
@@ -121,6 +129,16 @@ ul.stories {
   background-size: cover; 
 }
 
+.mountain-info {
+  color: white;
+  font-family: $font_main;
+  font-size: 20px;
+  font-weight: 100;
+  margin: 2%;
+  margin-top: 8%;
+}
+
+
 .bonfire {
   grid-column: 4/4;
   grid-row: 3/4;
@@ -130,7 +148,14 @@ ul.stories {
     rgba(0,0,0,0.3)), url(../../images/night-sky.jpg) center no-repeat;
   background-size: cover; 
 }
-
+.bonfire-info {
+  color: white;
+  font-family: $font_main;
+  font-size: 20px;
+  font-weight: 100;
+  margin: 2%;
+  margin-top: 8%;
+}
 .more-adventures {
   background-color: $brand_color_green;
   padding: 2% 3%;
@@ -222,20 +247,6 @@ h2.inhabitent-adventures {
       text-transform: uppercase;
     }
    }
-}
-
-.social-media-journal {
-  a {
-    border: 1px solid black;
-    padding: 10px 30px;
-    color: black;
-    font-family: $font_accent;
-    text-transform: uppercase;
-    margin-left: 10px;
-  } i {
-    color: black;
-    margin-right: 10px;
-  } 
 }
 
 //sidebar
