Styled search Icon in header as well as tried to style individual product pages

--- a/themes/inhabitent/sass/_content.scss
+++ b/themes/inhabitent/sass/_content.scss
@@ -153,3 +153,10 @@
 #comments {
 	width: 100%;
 }
+
+// single product page using single-product
+.product-template-default {
+	#content {
+	 
+	}
+}
