--- a/themes/inhabitent/sass/_navigation.scss
+++ b/themes/inhabitent/sass/_navigation.scss
@@ -97,6 +97,7 @@ ul {
 		color: $color__text-screen;
 		font-family: $font_accent;
 		text-transform: uppercase;
+		font-size: 16px;
 	}
 
 	.current_page_item > a,
