Changed the button for search bar to search

--- a/themes/inhabitent/style.css
+++ b/themes/inhabitent/style.css
@@ -776,6 +776,9 @@ a {
 #comments {
   width: 100%; }
 
+#search-field {
+  display: none; }
+
 /*--------------------------------------------------------------
 # Media
 --------------------------------------------------------------*/
